[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/shoot/Shell.gd" type="Script" id=1]
[ext_resource path="res://player/shoot/shell_impact.wav" type="AudioStream" id=2]

[sub_resource type="PhysicsMaterial" id=3]
bounce = 0.2

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.01
bottom_radius = 0.01
height = 0.05
radial_segments = 8

[sub_resource type="CapsuleShape" id=2]
radius = 0.0116179
height = 0.0314853

[node name="Shell" type="RigidBody"]
mass = 0.102041
physics_material_override = SubResource( 3 )
contacts_reported = 1
contact_monitor = true
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )

[node name="ShellImpactSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_shape_entered" from="." to="." method="_on_Shell_body_shape_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
